--- a/stack_etudiants/package.json
+++ b/stack_etudiants/package.json
@@ -70,6 +70,8 @@
 
     "node-notifier": "^5.4.0",
 
+    "node-sass": "^9.0.0",
+
     "sass": "^1.48.0",
 
     "svg-spritemap-webpack-plugin": "^3.9.1",
@@ -123,3 +125,4 @@
   }
 
 }
+
